--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
-body
+body {
   font-size: 14px;
 }
 
 nav {
-  background color: yellow;
+  background-color: yellow;
   height: 100px;
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
+}
 
 section {
   margin: 0 auto;
@@ -16,6 +16,7 @@ section {
 }
 
 h1 {
+  /* referring to first sentence*/
   font-family sans-serif;
   font-size: 2em;
 }
@@ -26,6 +27,7 @@ h1 {
 }
 
 h3 {
+  /* size of second sentence's font */
   font-size: 1.3em;
 }
 
@@ -34,3 +36,4 @@ h3 {
   height: 100px;
   margin 10px 0;
   width: 100%;
+}
