--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,13 @@ section {
 
 h1 {
   /* referring to first sentence*/
-  font-family sans-serif;
+  font-family: sans-serif;
   font-size: 2em;
 }
 
 .example, h3 {
   padding-top: 30px;
-  text-align center
+  text-align: center;
 }
 
 h3 {
@@ -34,19 +34,19 @@ h3 {
 .element {
   background-color: green;
   height: 100px;
-  margin 10px 0;
+  margin: 10px 0;
   width: 100%;
 }
 
-.element:seventh-child {
+.element:nth-child(7) {
   /* change of background color */
   background-color: pink;
 }
 
-.element:eighth-child {
+.element:nth-child(8) {
   background-color: pink;
 }
 
-.element:ninth-child {
+.element:nth-child(9) {
   background-color: pink;
 }
